fixed layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,10 +111,6 @@ form button:hover {
 .image-container{
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 img {
